--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -120,7 +120,7 @@
                     android:layout_margin="10dp"
                     app:layout_constraintTop_toBottomOf="@+id/tvMenuUtama"
                     app:layout_constraintStart_toEndOf="@+id/cardForm"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/cardMenu"
                     app:layout_constraintBottom_toBottomOf="parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -152,6 +152,47 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
 
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardMenu"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    app:cardElevation="5dp"
+                    app:cardCornerRadius="20dp"
+                    android:backgroundTint="#FFFFFF"
+                    app:layout_constraintTop_toBottomOf="@+id/tvMenuUtama"
+                    app:layout_constraintStart_toEndOf="@+id/cardProfile"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp">
+
+                        <ImageView
+                            android:id="@+id/burger"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/menu"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintBottom_toTopOf="@+id/tvFood" />
+
+                        <TextView
+                            android:id="@+id/tvFood"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Menu"
+                            android:textStyle="bold"
+                            android:textSize="20sp"
+                            android:textColor="#202020"
+                            app:layout_constraintTop_toBottomOf="@+id/burger"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
@@ -185,16 +226,16 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
-                <!-- FOOD -->
+                <!-- CALC -->
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cardMenu"
+                    android:id="@+id/cardCalc"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    app:cardCornerRadius="20dp"
                     android:layout_margin="10dp"
                     app:cardElevation="5dp"
-                    app:cardCornerRadius="20dp"
                     android:backgroundTint="#FFFFFF"
-                    app:layout_constraintTop_toBottomOf="@+id/tvMenuLain"
+                    app:layout_constraintTop_toBottomOf="@+id/tvLainLain"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/cardTemp"
                     app:layout_constraintBottom_toBottomOf="parent">
@@ -204,31 +245,32 @@
                         android:layout_height="100dp">
 
                         <ImageView
-                            android:id="@+id/burger"
-                            android:layout_width="50dp"
+                            android:id="@+id/rating"
+                            android:layout_width="0dp"
                             android:layout_height="50dp"
-                            android:src="@drawable/menu"
+                            android:src="@drawable/calculator"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintBottom_toTopOf="@+id/tvFood" />
+                            app:layout_constraintBottom_toTopOf="@+id/tvRating" />
 
                         <TextView
-                            android:id="@+id/tvFood"
+                            android:id="@+id/tvRating"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Menu"
+                            android:text="Kalkulator"
                             android:textStyle="bold"
                             android:textSize="20sp"
                             android:textColor="#202020"
-                            app:layout_constraintTop_toBottomOf="@+id/burger"
+                            app:layout_constraintTop_toBottomOf="@+id/rating"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
 
-                <!-- DRINK -->
+
+                <!-- TEMP -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardTemp"
                     android:layout_width="0dp"
@@ -238,8 +280,8 @@
                     app:cardCornerRadius="20dp"
                     android:backgroundTint="#FFFFFF"
                     app:layout_constraintTop_toBottomOf="@+id/tvMenuLain"
-                    app:layout_constraintStart_toEndOf="@+id/cardMenu"
-                    app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/cardCalc"
+                    app:layout_constraintEnd_toStartOf="@+id/cardExit"
                     app:layout_constraintBottom_toBottomOf="parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -271,83 +313,6 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
-
-        <!-- CARD BAWAH -->
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardBawah"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardElevation="8dp"
-            app:cardCornerRadius="15dp"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="#FFFFFF"
-            app:layout_constraintTop_toBottomOf="@+id/cardTengah"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp">
-
-                <TextView
-                    android:id="@+id/tvLainLain"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Lain-Lain"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:textColor="#202020"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
-
-                <!-- RATING -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardCalc"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:cardCornerRadius="20dp"
-                    android:layout_margin="10dp"
-                    app:cardElevation="5dp"
-                    android:backgroundTint="#FFFFFF"
-                    app:layout_constraintTop_toBottomOf="@+id/tvLainLain"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/cardExit"
-                    app:layout_constraintBottom_toBottomOf="parent">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp">
-
-                        <ImageView
-                            android:id="@+id/rating"
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/calculator"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintBottom_toTopOf="@+id/tvRating" />
-
-                        <TextView
-                            android:id="@+id/tvRating"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Kalkulator"
-                            android:textStyle="bold"
-                            android:textSize="20sp"
-                            android:textColor="#202020"
-                            app:layout_constraintTop_toBottomOf="@+id/rating"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-                </androidx.cardview.widget.CardView>
-
-                <!-- EXIT -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cardExit"
                     android:layout_width="0dp"
@@ -356,8 +321,8 @@
                     android:layout_margin="10dp"
                     app:cardElevation="5dp"
                     android:backgroundTint="#FFFFFF"
-                    app:layout_constraintTop_toBottomOf="@+id/tvLainLain"
-                    app:layout_constraintStart_toEndOf="@+id/cardCalc"
+                    app:layout_constraintTop_toBottomOf="@+id/tvMenuLain"
+                    app:layout_constraintStart_toEndOf="@+id/cardTemp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent">
 
@@ -389,9 +354,7 @@
                             app:layout_constraintBottom_toBottomOf="parent" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
-
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
