--- a/app/src/main/res/layout/activity_constraint.xml
+++ b/app/src/main/res/layout/activity_constraint.xml
@@ -11,8 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnDel"
         android:text="🔢Calculator"
         android:textSize="18sp"
         android:textAlignment="center"/>
@@ -24,7 +23,8 @@
         android:hint="01234"
         android:textAlignment="6"
         android:inputType="number"
-        android:textSize="45dp"
+        android:textSize="60sp"
+        android:background="#00FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/btnDel"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -34,10 +34,10 @@
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_weight="1"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
+        android:layout_marginVertical="5dp"
         android:backgroundTint="#FF0000"
         android:text="C"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/btn8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnDel"/>
@@ -45,24 +45,24 @@
     <Button
         android:id="@+id/btnDel"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         app:layout_constraintHorizontal_weight="0.5"
         app:layout_constraintEnd_toStartOf="@+id/btnBagi"
         app:layout_constraintBottom_toTopOf="@+id/btn9"
         app:layout_constraintStart_toEndOf="@+id/btnC"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
-        android:text="Del"
-        android:textSize="20sp"/>
+        android:layout_marginVertical="5dp"
+        android:text="Dlt"
+        android:textSize="27sp"/>
 
     <Button
         android:id="@+id/btnBagi"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="/"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
+        android:layout_marginVertical="5dp"
         android:backgroundTint="#53AF4C"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnDel"
@@ -77,10 +77,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn9"
         app:layout_constraintBottom_toTopOf="@+id/btnKurang"
-        android:layout_marginVertical="15dp"
+        android:layout_marginVertical="5dp"
         android:layout_marginHorizontal="10dp"
         android:text="*"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:backgroundTint="#53AF4C"/>
 
     <Button
@@ -92,9 +92,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn8"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
+        android:layout_marginVertical="5dp"
         android:text="7"
-        android:textSize="20sp"/>
+        android:textSize="30sp"/>
 
     <Button
         android:id="@+id/btn9"
@@ -105,8 +105,8 @@
         app:layout_constraintEnd_toStartOf="@+id/btnKali"
         app:layout_constraintStart_toEndOf="@+id/btn8"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
-        android:textSize="20sp"
+        android:layout_marginVertical="5dp"
+        android:textSize="30sp"
         android:text="9"/>
 
     <Button
@@ -118,9 +118,9 @@
         app:layout_constraintStart_toEndOf="@+id/btn7"
         app:layout_constraintEnd_toStartOf="@+id/btn9"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
+        android:layout_marginVertical="5dp"
         android:text="8"
-        android:textSize="20sp"/>
+        android:textSize="30sp"/>
 
     <Button
         android:id="@+id/btn4"
@@ -131,9 +131,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn5"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
+        android:layout_marginVertical="5dp"
         android:text="4"
-        android:textSize="20sp"/>
+        android:textSize="30sp"/>
 
     <Button
         android:id="@+id/btnKurang"
@@ -144,8 +144,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn6"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
-        android:textSize="20sp"
+        android:layout_marginVertical="5dp"
+        android:textSize="30sp"
         android:text="-"
         android:backgroundTint="#53AF4C"/>
 
@@ -158,9 +158,9 @@
         app:layout_constraintEnd_toStartOf="@+id/btnKurang"
         app:layout_constraintStart_toEndOf="@+id/btn5"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
+        android:layout_marginVertical="5dp"
         android:text="6"
-        android:textSize="20sp"/>
+        android:textSize="30sp"/>
 
     <Button
         android:id="@+id/btn5"
@@ -171,8 +171,8 @@
         app:layout_constraintStart_toEndOf="@+id/btn4"
         app:layout_constraintEnd_toStartOf="@+id/btn6"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
-        android:textSize="20sp"
+        android:layout_marginVertical="5dp"
+        android:textSize="30sp"
         android:text="5"/>
 
     <Button
@@ -184,8 +184,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn3"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
-        android:textSize="20sp"
+        android:layout_marginVertical="5dp"
+        android:textSize="30sp"
         android:text="+"
         android:backgroundTint="#53AF4C"/>
 
@@ -198,8 +198,8 @@
         app:layout_constraintEnd_toStartOf="@+id/btnTambah"
         app:layout_constraintStart_toEndOf="@+id/btn2"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
-        android:textSize="20sp"
+        android:layout_marginVertical="5dp"
+        android:textSize="30sp"
         android:text="3"/>
 
     <Button
@@ -211,8 +211,8 @@
         app:layout_constraintEnd_toStartOf="@+id/btn3"
         app:layout_constraintStart_toEndOf="@+id/btn1"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
-        android:textSize="20sp"
+        android:layout_marginVertical="5dp"
+        android:textSize="30sp"
         android:text="2"/>
 
     <Button
@@ -224,8 +224,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn2"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
-        android:textSize="20sp"
+        android:layout_marginVertical="5dp"
+        android:textSize="30sp"
         android:text="1"/>
 
     <Button
@@ -237,8 +237,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnKoma"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
-        android:textSize="20sp"
+        android:layout_marginVertical="5dp"
+        android:textSize="30sp"
         android:text="="
         android:backgroundTint="#3E54DE"/>
 
@@ -251,8 +251,8 @@
         app:layout_constraintEnd_toStartOf="@+id/btnSaDeng"
         app:layout_constraintStart_toEndOf="@+id/btn0"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
-        android:textSize="20sp"
+        android:layout_marginVertical="5dp"
+        android:textSize="30sp"
         android:text=","
         android:backgroundTint="#53AF4C"/>
 
@@ -265,8 +265,8 @@
         app:layout_constraintEnd_toStartOf="@+id/btnKoma"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="15dp"
-        android:textSize="20sp"
+        android:layout_marginVertical="5dp"
+        android:textSize="30sp"
         android:text="0"/>
 
 
