--- a/app/src/main/res/layout/activity_form_menu.xml
+++ b/app/src/main/res/layout/activity_form_menu.xml
@@ -399,7 +399,7 @@
         android:layout_height="wrap_content"
         android:text="Pesan Sekarang"
         android:textSize="20sp"
-        android:textColor="@color/black_white"
+        android:textColor="#FFFFFF"
         android:layout_alignParentBottom="true"
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="10dp"
